# Agentry

./: .gitignore  README.md  package-lock.json  package.json
.githooks/: pre-commit
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
context/: README.md  architecture.md  backend.md  database.md  decision-log.md  design-system.md  developer-workflow.md  frontend.md  glossary.md  project-vision.md  repository-structure.md  roadmap.md  technology.md
dummy-agent/: .env.example  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
landingpage/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: config.mjs  dev.mjs  run-task.mjs  setup-hooks.mjs  (+2 more)
sdk/python/: .env.example  README.md  pyproject.toml  requirements-dev.txt
sdk/python/agentry/: __init__.py
sdk/python/agentry/client/: __init__.py  monitor.py
sdk/python/agentry/config/: __init__.py  settings.py
sdk/python/agentry/context/: __init__.py  state.py
sdk/python/agentry/decorators/: __init__.py  trace.py
sdk/python/agentry/models/: __init__.py  payload.py
sdk/python/agentry/tracing/: __init__.py  runtime.py  scope.py
sdk/python/agentry/transport/: __init__.py  base.py  batch.py  http.py  retry.py
sdk/python/agentry/utils/: __init__.py  ids.py  logging.py
sdk/python/runloop/: __init__.py
sdk/python/runloop/client/: __init__.py  monitor.py
sdk/python/runloop/config/: __init__.py  settings.py
sdk/python/runloop/context/: __init__.py  state.py
sdk/python/runloop/decorators/: __init__.py  trace.py
sdk/python/runloop/models/: __init__.py  payload.py
sdk/python/runloop/tracing/: __init__.py  runtime.py  scope.py
sdk/python/runloop/transport/: __init__.py  base.py  batch.py  http.py  retry.py
sdk/python/runloop/utils/: __init__.py  ids.py  logging.py  time.py
sdk/python/tests/: test_batch_processor.py  test_http_transport.py  test_monitor.py  test_retry_policy.py  test_settings.py
(+133 files in other folders)
