[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runloop"
version = "0.1.0"
description = "Official Runloop Python SDK for AI eval instrumentation and trace export."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Runloop" }]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.10,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["runloop*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["runloop", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "N"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
packages = ["runloop"]
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
